--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Miguel Isaac V. Gomes-2C (27/08/2024)
     <main>
         <main>
             <div class="passo ativo" id="passo-0">
-                <img src="Imagem-passo00.jpeg" alt="">
+                <img src="img/Imagem-passo00.jpeg" alt="">
                 <p>Você lentamente abre os olhos e se depara diante de um lugar desconhecido. Com muita dor de cabeça
                     você
                     se
@@ -35,19 +35,19 @@ Miguel Isaac V. Gomes-2C (27/08/2024)
                     lugar.</button>
             </div>
             <div class="passo" id="passo-1">
-                <img src="Imagem-passo01.jpeg" alt="">
+                <img src="img/Imagem-passo01.jpeg" alt="">
                 <p>Você encontra uma raposa. Ela não parece ser ameaçadora. você fala com ela?</p>
                 <button class="btn-proximo" data-proximo="3">Sim.</button>
                 <button class="btn-proximo" data-proximo="4">Não.</button>
             </div>
             <div class="passo" id="passo-2">
-                <img src="Imagem-passo02.jpeg" alt="">
+                <img src="img/Imagem-passo02.jpeg" alt="">
                 <p>Você encontra uma trilha abandonada.</p>
                 <button class="btn-proximo" data-proximo="5">Vou seguir a trilha!</button>
                 <button class="btn-proximo" data-proximo="6">Vou voltar, acho que é mais seguro.</button>
             </div>
             <div class="passo" id="passo-3">
-                <img src="raposa de costas para voce.jpeg" alt="">
+                <img src="img/raposa de costas para voce.jpeg" alt="">
                 <p>Ao falar com a raposa, você encontra um ser astuto e perspicaz. A raposa, com seus olhos brilhantes e
                     pelagem avermelhada, escutava atentamente o que você tinha a dizer. "Preciso de ajuda para voltar
                     pra casa! não sei onde estou". A raposa, com um sorriso enigmático, ofereceu-se para guiá-lo, mas
@@ -56,25 +56,25 @@ Miguel Isaac V. Gomes-2C (27/08/2024)
             </div>
 
             <div class="passo" id="passo-4">
-                <img src="pessoa enlouquecendo.jpeg" alt="">
+                <img src="img/pessoa enlouquecendo.jpeg" alt="">
                 <p>Você decide não conversar com a raposa e acaba caindo no bosque da loucura, o que te leva a ser esquecido por toda a eternidade.
                 </p>
             </div>
 
             <div class="passo" id="passo-5">
-                <img src="templo.jpeg" alt="">
+                <img src="img/templo.jpeg" alt="">
                 <p>Ao seguir a trilha abandonada, você se depara com um templo imponente, coberto de vegetação e parcialmente oculto pela névoa. A entrada é guardada por duas estátuas enigmáticas e a porta, de pedra maciça, está entreaberta. Você entra e encontra uma sala principal iluminada por uma luz suave que entra por claraboias no teto. No centro, há um altar com um antigo livro de capa dourada. Junto dele, voce encontra uma raposa enigmática. Ao falar com ela você diz: ”</p>
                 <button class="btn-proximo" data-proximo="7">Seguir a raposa.</button>
             </div>
 
             <div class="passo" id="passo-6">
-                <img src="Sem saida.jpeg" alt="">
+                <img src="img/Sem saida.jpeg" alt="">
                 <p>voltando pelo mesmo caminho (ou não), você percebe que ele agora te leva para um beco sem saída.</p>
                 <button class="btn-proximo" data-proximo="8">Voltar e explorar o templo.</button>
             </div>
 
             <div class="passo" id="passo-7">
-             <img src="2 caminhos.jpeg" alt="">
+             <img src="img/2 caminhos.jpeg" alt="">
                 <p>Ao seguir a raposa para voltar para casa, com perspicácia ela segue uma trilha. confiante, ela diz:
                     "agora, é você e você! siga este rio e resolva a charada:"o que seria o inverso de minha esquerda 4
                     vezes?", ao resolver, você se deparará com sua casa! seguindo
@@ -84,19 +84,19 @@ Miguel Isaac V. Gomes-2C (27/08/2024)
             </div>
 
             <div class="passo" id="passo-8">
-                <img src="Raposa correndo.jpeg" alt="">
+                <img src="img/Raposa correndo.jpeg" alt="">
                 <p>Voltando ao templo, você nota que tem uma raposa correndo com um livro na  mão. Ao correr atrás dela, você grita  “Socorro!!! Preciso de ajuda para voltar para minha casa!!!” ao ouvir isso, a raposa vira a cabeça e diz “me siga” </p>
                 <button class="btn-proximo" data-proximo="7">Seguir a raposa.</button>
             </div>
 
             <div class="passo" id="passo-9">
-                <img src="cidade.jpeg" alt="">
+                <img src="img/cidade.jpeg" alt="">
                 <p>Ao seguir a esquerda, você se depara com sua cidade de origem.</p>
                 <button class="btn-proximo" data-proximo="11">Entrar em sua cidade de origem.</button>
             </div>
 
             <div class="passo" id="passo-10">
-                <img src="pantano.jpeg" alt="">
+                <img src="img/pantano.jpeg" alt="">
                 <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais de sua casa
                     por aqui.
                 </p>
@@ -104,14 +104,14 @@ Miguel Isaac V. Gomes-2C (27/08/2024)
             </div>
 
             <div class="passo" id="passo-11">
-                <img src="Fim.jpeg" alt="">
+                <img src="img/Fim.jpeg" alt="">
                 <p> A raposa, ao guiá-lo com sabedoria e apoio, fez com que você aprendesse a importância de manter a
                     calma e a confiança em momentos difíceis. Ao chegar em sua casa,você se sentiu grato pela raposa ter te ajudado e reconheceu as
                     valiosas lições dessa jornada.</p>
             </div>
 
             <div class="passo" id="passo-12">
-                <img src="cidade.jpeg" alt="">
+                <img src="img/cidade.jpeg" alt="">
                 <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra sua cidade de origem.</p>
                 <button class="btn-proximo" data-proximo="11">Entrar nela.</button>
             </div>
